z-index fixes and height on mobile

--- a/css/commerce_columns_carousel_new.css
+++ b/css/commerce_columns_carousel_new.css
@@ -3,6 +3,7 @@
 /*------------------------------------------------------*/
 .commerce_columns_carousel_wrapper{
   overflow: visible;
+  clear: both;
 }
 .commerce_columns_carousel_wrapper .carousel-item > .row{
   margin: 0;
